[package]
name = "extract_to_sqlite_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
polars-core = "0.45.1"
connectorx = { version = "0.4.1", features = ["arrow", "dst_arrow", "dst_polars", "polars", "src_mssql"] }
polars = { version = "0.45.1", features = ["parquet"] }
clap = { version = "4.5.27", features = ["derive"] }
toml = "0.8.19"
directories = "6.0.0"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
# polars-core MUST match between both in order to pass the dataframe to the polars parquet writer,
# inspect the tree with:
# cargo tree | grep polars-core
# And identify the lowest common denominator
