[package]
name = "extract_to_sqlite_rs"
version = "0.1.0"
# edition = "2024" # Nightly
edition = "2021" # Stable

[dependencies]
polars-core = "0.45.1"
connectorx = { version = "0.4.1", features = ["arrow", "dst_arrow", "dst_polars", "polars", "src_mssql", "src_postgres", "src_sqlite"] }
polars = { version = "0.45.1", features = ["parquet"] }
clap = { version = "4.5.27", features = ["derive"] }
toml = "0.8.19"
directories = "6.0.0"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }

# The version of polars in duckdb is too old (0.35) so we can't use it.
duckdb = { version = "1.1.1", features = ["parquet"], optional = true}
# polars-core MUST match between both in order to pass the dataframe to the polars parquet writer,
# inspect the tree with:
# cargo tree | grep polars-core
# And identify the lowest common denominator

# This may cause grief but should be faster
# [build]
# rustflags = ["-Z", "threads=8"]



# [target.x86_64-pc-windows-gnu]
# rustflags = ["-C", "target-feature=+crt-static"]




[features]
duckdb = ["dep:duckdb"]
